# mysql-udf

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  release.py
.github/workflows/: release-rust.yaml  validation-rust.yaml
test-integration/: Cargo.toml
test-integration/tests/: blake.rs  hash.rs  net.rs  test_ip.rs  test_uuid.rs  uuid.rs  xxhash.rs
test-integration/tests/backend/: mod.rs
udf-blake/: Cargo.toml
udf-blake/src/: lib.rs
udf-hash/: Cargo.toml
udf-hash/src/: lib.rs
udf-jsonify/: Cargo.toml
udf-jsonify/src/: lib.rs
udf-lipsum/: Cargo.toml
udf-net/: Cargo.toml
udf-net/src/: lib.rs
udf-uuid/: Cargo.toml  README.md
udf-uuid/src/: convert.rs  generate.rs  lib.rs  valid.rs
udf-xxhash/: Cargo.toml
udf-xxhash/src/: lib.rs
