[package]
name = "test-integration"
version = "0.1.5"
edition = "2021"
publish = false
license = "Apache-2.0 OR GPL-2.0-or-later"

[dependencies]

[dev-dependencies]
regex = "1.7.2"
diesel = { version = "2.0.3", features = ["mysql"] }
lazy_static = "1.4.0"
uuid = { version = "1.2.2", features = ["v1", "v3", "v4", "v5", "fast-rng"] }
hex-literal = "0.4.1"
hex = "0.4.3"

[features]
# Used to optionally enable integration tests
backend = []
