[package]
name = "test-integration"
version = "0.1.10"
edition = "2021"
publish = false
license = "Apache-2.0 OR GPL-2.0-or-later"

[dependencies]
mysql = { version = "24.0.0", default-features = false }

[dev-dependencies]
regex = "1.9.5"
lazy_static = "1.4.0"
uuid = { version = "1.4.1", features = ["v1", "v3", "v4", "v5", "fast-rng"] }
hex-literal = "0.4.1"
hex = "0.4.3"
mysql = "24.0.0"

[features]
# Used to optionally enable integration tests
backend = []
