[package]
name = "udf-hash"
version = "0.1.9"
edition = "2021"
publish = false
license = "Apache-2.0 OR GPL-2.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
blake2 = "0.10.6"
blake3 = { version = "1.5.0", features = ["rayon"] }
data-encoding = "2.4.0"
digest = "0.10.7"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
udf = { version = "0.5.4", features = ["mock"] }
xxhash-rust = { version = "0.8.7", features = ["xxh3", "xxh32", "xxh64"] }
