[package]
name = "udf-uuid"
version = "0.1.10"
edition = "2021"
publish = false
license = "Apache-2.0 OR GPL-2.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
udf = { version = "0.5.4", features = ["mock"] }
uuid = { version = "1.4.1", features = ["v1", "v3", "v4", "v5", "v6", "v7", "fast-rng"] }
mac_address = "1.1.5"
rand = "0.8.5"

[dev-dependencies]
hex-literal = "0.4.1"
